--- a/pitomba/templates/index.html
+++ b/pitomba/templates/index.html
@@ -9,9 +9,9 @@ The tree and fruit are called pitomba in English, Spanish and Portuguese, cotopa
         <a href="http://en.wikipedia.org/wiki/Talisia_esculenta" class="button">Wikipedia</a>
     </article>
     <article class="one-third column">
-        <h3>How to Install</h3>
+        <h3>Features</h3>
         <p>bla bla</p>
-        <a href="{{SERVER_NAME}}/install" class="button">Install</a>
+        <a href="{{SERVER_NAME}}/features" class="button">Features</a>
     </article>
     <article class="one-third column">
         <h3>How to Use</h3>
