--- a/pitomba/templates/base.html
+++ b/pitomba/templates/base.html
@@ -29,6 +29,19 @@
         </div>
     </header>
 
+    <nav>
+        <div class="container">
+            <div class="sixteen columns">
+                <ul>
+                    <li class="first"><a href="{{SERVER_NAME}}">Home</a></li>
+                    <li class=""><a href="{{SERVER_NAME}}/usage">Usage</a></li>
+                    <li class=""><a href="{{SERVER_NAME}}/demo">Demo</a></li>
+                    <li class="last"><a href="{{SERVER_NAME}}/contribute">Contribute</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     {% block content %}
     {% end %}
 
