Features and demo

--- a/pitomba/templates/base.html
+++ b/pitomba/templates/base.html
@@ -34,7 +34,7 @@
             <div class="sixteen columns">
                 <ul>
                     <li class="first"><a href="{{SERVER_NAME}}">Home</a></li>
-                    <li class=""><a href="{{SERVER_NAME}}/usage">Usage</a></li>
+                    <li class=""><a href="{{SERVER_NAME}}/features">Features</a></li>
                     <li class=""><a href="{{SERVER_NAME}}/demo">Demo</a></li>
                     <li class="last"><a href="{{SERVER_NAME}}/contribute">Contribute</a></li>
                 </ul>
