--- a/pitomba/templates/index.html
+++ b/pitomba/templates/index.html
@@ -3,20 +3,23 @@
 {% block content %}
 <section class="container">
     <article class="one-third column">
-        <h3>Pitomba</h3>
-        <p>Talisia esculenta is a medium-sized tree native to the Amazon Basin, and is found in Brazil, Colombia, Peru, Paraguay and Bolivia.
-The tree and fruit are called pitomba in English, Spanish and Portuguese, cotopalo in Spanish, pitoulier comestible in French and olho de boi, pitomba-rana and pitomba de macaco in Portuguese.</p>
-        <a href="http://en.wikipedia.org/wiki/Talisia_esculenta" class="button">Wikipedia</a>
-    </article>
-    <article class="one-third column">
         <h3>Features</h3>
-        <p>bla bla</p>
-        <a href="{{SERVER_NAME}}/features" class="button">Features</a>
+        <p>Pitomba provides simple and flexible sprite generator for CSS, using Python.</p>
+        <p>Pitomba can process CSS both synchronous and asynchronous as it provides classes to be used in
+        your python code and also a watcher that listens to your filesystem and changes CSS and
+        sprite as soon as a static is changed.</p>
+        See <a href="{{SERVER_NAME}}/features">more</a>.
     </article>
     <article class="one-third column">
-        <h3>How to Use</h3>
-        <p>bla bla</p>
-        <a href="{{SERVER_NAME}}/usage" class="button">Usage</a>
+        <h3>How to Install</h3>
+        <p>The simplest way is just type "pip install spriter"</p>
+        See a <a href="{{SERVER_NAME}}/demo">demo</a> app and notice how easy is using pitomba.
+    </article>
+    <article class="one-third column">
+        <h3>Curiosity</h3>
+        <p>Pitomba (Talisia esculenta) is a medium-sized tree native to the Amazon Basin, and is found in Brazil, Colombia, Peru, Paraguay and Bolivia.
+The tree and fruit are called pitomba in English, Spanish and Portuguese, cotopalo in Spanish, pitoulier comestible in French and olho de boi, pitomba-rana and pitomba de macaco in Portuguese.</p>
+        Fonte: <a href="http://en.wikipedia.org/wiki/Talisia_esculenta">Wikipedia</a>
     </article>
 </section>
 {% end %}
