--- a/pitomba/templates/features.html
+++ b/pitomba/templates/features.html
@@ -15,7 +15,7 @@
 			<li>
 				<strong>Asynchronous</strong>
 				<p>Also, pitomba provides a watcher that listens to your filesystem and generates a new sprite as soon as a image is updated.
-				It's very similar to what compass does.</p>
+				It's very similar to what compass does: any changes on images diretory, a new sprite will be generated.</p>
 			</li>
 		</ul>
     </article>
