--- a/pitomba/templates/features.html
+++ b/pitomba/templates/features.html
@@ -16,6 +16,8 @@
 				<strong>Asynchronous</strong>
 				<p>Also, pitomba provides a watcher that listens to your filesystem and generates a new sprite as soon as a image is updated.
 				It's very similar to what compass does: any changes on images diretory, a new sprite will be generated.</p>
+				<p>After install pitomba, just type: pitomba_watcher.py -c /path/to/config/file</p>
+				<p>An example config.cfg file is provided with pitomba source</p>
 			</li>
 		</ul>
     </article>
