--- a/pitomba/templates/base.html
+++ b/pitomba/templates/base.html
@@ -36,7 +36,7 @@
                     <li class="first"><a href="{{SERVER_NAME}}">Home</a></li>
                     <li class=""><a href="{{SERVER_NAME}}/features">Features</a></li>
                     <li class=""><a href="{{SERVER_NAME}}/demo">Demo</a></li>
-                    <li class="last"><a href="{{SERVER_NAME}}/contribute">Contribute</a></li>
+                    <li class="last"><a href="{{SERVER_NAME}}/try">Try It!</a></li>
                 </ul>
             </div>
         </div>
@@ -51,9 +51,6 @@
             © 2013 <a href="https://github.com/pitomba/pitomba" itemprop="url" title="Pitomba Sprite Generator">Pitomba Sprite Generator</a>
             </li> 
         </ul>
-<!--         <ul id="footer_links" class="ten columns omega">
-            <li><a href="mailto:victor.pantoja@gmail.com" itemprop="email">victor.pantoja@gmail.com</a></li>
-        </ul> -->
     </footer>
 
 	<script>
