--- a/pitomba/templates/base.html
+++ b/pitomba/templates/base.html
@@ -35,8 +35,8 @@
                 <ul>
                     <li class="first"><a href="{{SERVER_NAME}}">Home</a></li>
                     <li class=""><a href="{{SERVER_NAME}}/features">Features</a></li>
-                    <li class=""><a href="{{SERVER_NAME}}/demo">Demo</a></li>
-                    <li class="last"><a href="{{SERVER_NAME}}/try">Try It!</a></li>
+                    <li class="last"><a href="{{SERVER_NAME}}/demo">Demo</a></li>
+                    <!-- <li class="last"><a href="{{SERVER_NAME}}/try">Try It!</a></li> -->
                 </ul>
             </div>
         </div>
