Liberating access do try page

--- a/pitomba/templates/base.html
+++ b/pitomba/templates/base.html
@@ -34,9 +34,9 @@
             <div class="sixteen columns">
                 <ul>
                     <li class="first"><a href="{{SERVER_NAME}}">Home</a></li>
-                    <li class=""><a href="{{SERVER_NAME}}/features">Features</a></li>
-                    <li class="last"><a href="{{SERVER_NAME}}/demo">Demo</a></li>
-                    <!-- <li class="last"><a href="{{SERVER_NAME}}/try">Try It!</a></li> -->
+                    <li><a href="{{SERVER_NAME}}/features">Features</a></li>
+                    <li><a href="{{SERVER_NAME}}/demo">Demo</a></li>
+                    <li class="last"><a href="{{SERVER_NAME}}/try">Try It!</a></li>
                 </ul>
             </div>
         </div>
