--- a/pitomba/templates/try.html
+++ b/pitomba/templates/try.html
@@ -29,8 +29,8 @@
 	   <a href="{{css_url}}" target="_new">View CSS</a>
 	   <a href="{{img_url}}" target="_new">View Image</a>
 	   <br />
-	   <span class="button">Download Sprite</span>
-	   <span class="button">Download CSS</span>
+<!-- 	   <span class="button">Download Sprite</span>
+	   <span class="button">Download CSS</span> -->
 	   <hr />
 	   {% for entidade in entidades %}
 	   <span class="demo {{entidade}}" style="display: block;"></span>
